navbar and card bar fixed + better name overflow handling

--- a/argentum-ui/src/app/card/card.component.scss
+++ b/argentum-ui/src/app/card/card.component.scss
@@ -1,3 +1,8 @@
 .input-card {
   width: 8em;
 }
+
+.overflow-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
