--- a/argentum-ui/src/styles.scss
+++ b/argentum-ui/src/styles.scss
@@ -19,11 +19,6 @@
   padding: 1px;
 }
 
-.overflow-ellipsis {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .pagination {
   margin-bottom: 0;
 }
